[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unwrap"   # choose any name, this is what `pip list` will show
version = "0.1.0"
description = "ODT phase unwrapping experiments"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
